--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -29,6 +29,11 @@
                 android:layout_height="wrap_content"
                 android:text="write" />
 
+            <ImageView
+                android:id="@+id/img"
+                android:layout_width="200dp"
+                android:layout_height="300dp" />
+
             <TextView
                 android:id="@+id/txt"
                 android:layout_width="wrap_content"
