--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -5,8 +5,8 @@
 
     <SurfaceView
         android:id="@+id/surface_view"
-        android:layout_width="240dp"
-        android:layout_height="427dp"
+        android:layout_width="match_parent"
+        android:layout_height="match_parent"
         android:layout_gravity="right" />
 
     <!--<ScrollView
